syntax = "proto3";

package auth;

option go_package = "auth";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service MyExampleService {
    rpc CreateNewUser(CreateUserRequest) returns (google.protobuf.Empty) {}
    rpc GetUser(GetUserRequest) returns (User) {}
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
    string email = 5;
}

message GetUserRequest {
    string username = 1;
}

message User {
    string username = 1;
    string user_id = 2;
    string first_name = 3;
    string last_name = 4;
    string email = 5;
    string role = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}